--- a/src/styles/arabic.css
+++ b/src/styles/arabic.css
@@ -19328,8 +19328,27 @@ ease;
     font-size: 15px !important;
     border-radius: 0px !important;
 }
+.feedback-btn {
+    width: 360px;
+    height: 50px;
+    border-radius: 15px !important;
+    font-size: 16px !important;
+}
+.form-label {
+    margin-bottom: 1.2rem !important;
+    font-size: 14px;
+    font-weight: 700;
+}
+.feedback-lable{
+  font-size: 12px;
+}
 /* ✅ Mobile responsive */
 @media (max-width: 768px) {
+    .appointment-form {
+    border: 1px solid #00000036;
+    border-radius: 10px;
+    padding: 20px !important;
+}
   .font-program {
     font-size: 15px;
   }
