--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19406,4 +19406,28 @@ ease;
     background-color: #39bced !important;
     border: none;
 }
-
+.form-label {
+    margin-bottom: .5rem;
+    font-weight: 600;
+  color:#000;
+}
+.feedback-btn {
+    width: 360px;
+    height: 50px;
+    border-radius: 15px !important;
+    font-size: 16px !important;
+    background-color: #004e78 !important;
+    border: none  !important;
+}
+@media (max-width: 768px) {
+  .appointment-form {
+    border: 1px solid #00000036;
+    border-radius: 10px;
+    padding: 20px !important;
+}
+.feedback-btn {
+    padding: 0px !important;
+    width: 250px !important;;
+    border-radius: 15px !important;
+}
+}
