--- a/src/styles/arabic.css
+++ b/src/styles/arabic.css
@@ -19338,6 +19338,7 @@ ease;
     margin-bottom: 1.2rem !important;
     font-size: 14px;
     font-weight: 700;
+  color:#000;
 }
 .feedback-lable{
   font-size: 12px;
