--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13260,6 +13260,7 @@ a.btn.btn-outline-secondary.btn-language {
     width: 110px;
       border-radius: 10px;
   height: 42px;
+   padding: 8px;
 }
 
 .btn-appointment{
