--- a/src/styles/arabic-responsive.css
+++ b/src/styles/arabic-responsive.css
@@ -16,7 +16,24 @@ html, body {
     margin-right: 15px !important;
   }
 }
-
+@media screen and (min-width: 1200px) and (max-width: 1400px) {
+ .page-banner-area {
+    background-color: #F5F5F5;
+    margin: 0 0px;
+    overflow: hidden;
+    padding-top: 180px;
+    padding-bottom: 120px !important;
+}
+}
+@media screen and (min-width: 767px) and (max-width: 1400px) {
+ .page-banner-area {
+    background-color: #F5F5F5;
+    margin: 0 0px;
+    overflow: hidden;
+    padding-top: 180px;
+    padding-bottom: 0px;
+}
+}
 @media (max-width: 768px) {
   .navbar .navbar-brand {
     padding-top: 0;
