--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19441,4 +19441,8 @@ label {
     width: 250px !important;;
     border-radius: 15px !important;
 }
+  .page-banner-area {
+    
+    background-position: 28% !important;
+}
 }
