--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19449,6 +19449,20 @@ label {
 font-size:36px !important;
 
 }
+.form-message{
+
+  top: 155%;
+    left: 36%;
+    z-index: 50;
+    background: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 12px;
+    width: 90%;
+    max-width: 550px;
+    text-align: center;
+
+}
 @media (max-width: 768px) {
   .appointment-form {
     border: 1px solid #00000036;
@@ -19479,6 +19493,20 @@ font-size:36px !important;
 }
 .telemedicine-title{
 font-size:20px !important;
+
+}
+    .form-message{
+
+  top: 155%;
+    left: 5%;
+    z-index: 50;
+    background: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 12px;
+    width: 90%;
+    max-width: 550px;
+    text-align: center;
 
 }
 }
