--- a/src/styles/arabic.css
+++ b/src/styles/arabic.css
@@ -19366,8 +19366,36 @@ font-size:30px !important;
 .map-text{
   margin-right:30px;
 }
+.form-message{
+
+  top: 155%;
+    left: 36%;
+    z-index: 50;
+    background: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 12px;
+    width: 90%;
+    max-width: 550px;
+   text-align: center !important;
+
+}
 /* ✅ Mobile responsive */
 @media (max-width: 768px) {
+      .form-message{
+
+  top: 155%;
+    left: 5%;
+    z-index: 50;
+    background: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 12px;
+    width: 90%;
+    max-width: 550px;
+    text-align: center !important;
+
+}
    .map-text{
   margin-right: 20px;
 }
