--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19451,8 +19451,6 @@ font-size:36px !important;
 }
 .form-message{
 
-  top: 155%;
-    left: 36%;
     z-index: 50;
     background: rgb(255, 255, 255);
     padding: 20px;
@@ -19461,7 +19459,7 @@ font-size:36px !important;
     width: 90%;
     max-width: 550px;
     text-align: center !important;
-
+   margin-left: 380px !important;
 }
 @media (max-width: 768px) {
   .appointment-form {
@@ -19496,9 +19494,6 @@ font-size:20px !important;
 
 }
     .form-message{
-
-  top: 155%;
-    left: 5%;
     z-index: 50;
     background: rgb(255, 255, 255);
     padding: 20px;
@@ -19507,6 +19502,6 @@ font-size:20px !important;
     width: 90%;
     max-width: 550px;
     text-align: center !important;
-
+margin-left: 15px !important;
 }
 }
